PR29293, elfnn-aarch64.c: def_protected member unintialized

PR 29293
	* elfnn-aarch64.c (elfNN_aarch64_link_hash_newfunc): Init def_protected.